# liff-utils

./: .gitignore  README.md  allfilm.html  catalog-reader-pypdf.py  catalog-reader.py  clashfinder  clashfinder-manual  clashfinder.sorted  new_ticket_split.py  pyproject.toml  requirements.txt  scrape.py  test_scrape.py  ticket-converter.py  ticket-split.py
.github/workflows/: tests.yml
2022/: clashfinder-meta
2023/: allfilm.html  clashfinder-manual  clashfinder-meta
2024/: clashfinder  clashfinder-manual  clashfinder-meta  missing-fillms.json
tests/: test_new_ticket_split.py  test_scrape.py
tests/fixtures/: allfilm-1.html  bugonia.html  film.html
tests/fixtures/ticket_split/schedules/: person_a.json  person_b.json
