[project]
name = "liff-utils"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4==4.12.2",
    "lxml==4.9.3",
    "pypdf2==3.0.1",
    "pytest>=8.4.2",
    "python-dateutil==2.8.2",
    "requests==2.31.0",
]
