[project]
name = "liff-utils"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4==4.12.2",
    "lxml==6.1.0",
    "pypdf2==3.0.1",
    "pytest>=9.0.3",
    "python-dateutil==2.8.2",
    "requests==2.31.0",
]
