[project]
name = "liff-utils"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4==4.14.3",
    "lxml==6.1.0",
    "pypdf2==3.0.1",
    "pytest>=9.0.3",
    "python-dateutil==2.9.0.post0",
    "requests==2.34.2",
]
